--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "file-saver": "^2.0.5",
+    "html-pdf": "^3.0.1",
     "mongoose": "^6.0.11",
     "nodemon": "^2.0.14",
     "stripe": "^8.184.0",
