--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
     "html-pdf": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.0.11",
     "nodemon": "^2.0.14",
